# Capt

./: .gitignore  README.md  lateral.py  main.py  mergefile.py  mergefile_lateral.py  sagittal.py  uncrustify_kuri.cfg
CRplot/: CMakeLists.txt
CRplot/include/: CRplot.h
CRplot/src/: Animation.cpp  B14Plot.cpp  CRplot.cpp  Gnuplot.cpp
LinearInvertedPendlum/: CMakeLists.txt  LinearInvertedPendlum.cpp  LinearInvertedPendlum.h  main.cpp
capturability/: .clang-format  CMakeLists.txt  README.md  check.cpp  converter.cpp  debug.cpp  main.cpp  main.cu  main_.cpp  test.cu  test_cop.cpp
capturability/cuda/include/: analysis_gpu.cuh  capturability.cuh  cuda_analysis.cuh  cuda_config.cuh  cuda_grid.cuh  cuda_input.cuh  cuda_memory_manager.cuh  cuda_physics.cuh  cuda_polygon.cuh  cuda_state.cuh  cuda_table.cuh  cuda_vector.cuh  grid.cuh  input.cuh  loader.cuh  model.cuh  nvidia.cuh  param.cuh  physics.cuh  polygon.cuh  state.cuh  vector.cuh
capturability/cuda/src/: analysis_gpu.cu  capturability.cu  cuda_analysis.cu  cuda_grid.cu  cuda_memory_manager.cu  cuda_polygon.cu  cuda_vector.cu  grid.cu  loader.cu  model.cu  param.cu  polygon.cu  vector.cu
capturability/data/: analysis.xml  footstep.xml  nao.xml  nao_xy.xml  param_val_xy.xml  valkyrie.xml  valkyrie_config.xml  valkyrie_xy.xml
capturability/doc/: grid.tex  main.tex
capturability/example/: CMakeLists.txt  anim_cop.cpp  anim_friction.cpp  anim_push.cpp  anim_sim.cpp  anim_step.cpp  anim_traj.cpp  animation.cpp  converter.cpp  debug.cpp  test_capture.cpp  test_friction.cpp  test_ik.cpp  test_plan.cpp  test_time.cpp  traj.cpp
capturability/include/: CA.h  Capt.h  analysis.h  analysis_cpu.h  analysis_cpu0.h  analysis_gpu.cuh  base.h  capturability.h  com_estimator.h  config.h  cr_plot.h  cycloid.h  foot_planner.h  footstep.h  friction_filter.h  generator.h  gnuplot.h  grid.h  grid_map.h  input.h  interpolation.h  kinematics.h  loader.h  model.h  monitor.h  node.h  param.h  pendulum.h  pid.h  planner.h  planning.h  plot_trajectory.h  polygon.h  search.h  state.h  swing.h  swing_foot.h  timer.h  trajectory.h  tree.h  (+1 more)
capturability/matlab/: .MATLABDriveTag  .~lock.result.csv#  analysis.m  analysis2.m  analysis_sub.m  capture_region.m  com.csv  com_ok.csv  draw_circle.m  draw_circle_broken.m  draw_foot.m  draw_foot_polygon.m  icp.csv  plot_result.m  plot_sim.m  region.csv  region2.csv  result.csv  result2.csv  swft.csv  tracking.m  zero_step.m
capturability/matlab/1step/: result.csv
capturability/matlab/fig/: com.fig  icp.fig
capturability/plot/: CMakeLists.txt  animation.cpp  converter.cpp  cr_gif.cpp  cr_graph.cpp  occupancy_graph.cpp  step.cpp  step_graph.cpp
capturability/plot/include/: cr_plot.h  occupancy_plot.h  step_plot.h
capturability/plot/src/: cr_plot.cpp  gnuplot.cpp  occupancy_plot.cpp  step_plot.cpp
capturability/result/: Basin.csv  calculation_time.ods  calculation_time.xlsx
capturability/result/calculation_time/: calculation_time.m  calculation_time.sh  calculation_time_exe.csv  calculation_time_save.csv  calculation_time_sum.csv
capturability/src/: analysis.cpp  analysis_cpu.cpp  analysis_gpu.cu  base.cpp  capturability.cpp  com_estimator.cpp  config.cpp  cr_plot.cpp  cycloid.cpp  foot_planner.cpp  footstep.cpp  friction_filter.cpp  generator.cpp  gnuplot.cpp  grid.cpp  grid_map.cpp  interpolation.cpp  kinematics.cpp  loader.cpp  model.cpp  monitor.cpp  param.cpp  pendulum.cpp  pid.cpp  planner.cpp  planning.cpp  plot_trajectory.cpp  polygon.cpp  search.cpp  swing.cpp  swing_foot.cpp  timer.cpp  trajectory.cpp  tree.cpp  vector.cpp
capturability/test/: animation.cpp  test_friction.cpp  test_ik.cpp
cartesian/: CMakeLists.txt  debug.cpp  main.cpp  main.cu
cartesian/capturability/: check.cpp  debug.cpp  main.cpp  main.cu
cartesian/capturability/data/: valkyrie.xml
cartesian/capturability/include/: base.h  capturability.h  node.h  param.h  swing.h  trajectory.h
cartesian/capturability/plot/: cr_gif.cpp  occupancy_graph.cpp
cartesian/capturability/src/: analysis_cpu.cpp  cycloid.cpp  grid.cpp
cartesian/cuda/include/: cuda_analysis.cuh  cuda_config.cuh  cuda_memory_manager.cuh  cuda_vector.cuh
cartesian/cuda/src/: cuda_analysis.cu  cuda_memory_manager.cu  cuda_vector.cu
cartesian/data/: nao.xml  nao_xy.xml  valkyrie.xml  valkyrie_config.xml  valkyrie_exception.csv  valkyrie_xy.xml
cartesian/doc/: controller.tex  grid.tex  main.tex
cartesian/include/: Capt.h  analysis_cpu.h  base.h  capturability.h  config.h  cycloid.h  generator.h  grid.h  grid_map.h  input.h  interpolation.h  model.h  monitor.h  param.h  pendulum.h  planner.h  search.h  state.h  swing.h  trajectory.h  tree.h
cartesian/matlab/: analysis.m  analysis_time.m  reference.m
cartesian/plot/: CMakeLists.txt  converter.cpp  cr_gif.cpp  cr_graph.cpp
cartesian/src/: analysis_cpu.cpp  base.cpp  capturability.cpp  config.cpp  generator.cpp  grid.cpp  grid_map.cpp  interpolation.cpp  loader.cpp  model.cpp  monitor.cpp  param.cpp  pendulum.cpp  planner.cpp  polygon.cpp  search.cpp  swing.cpp  timer.cpp  trajectory.cpp  tree.cpp
cartesian/time/: calculation_time.m  calculation_time.sh  measure_time_console.txt
filter/: data.cpp  (+2 more)
qt/window/: CMakeLists.txt
se2/: CMakeLists.txt  cr_graph.cpp  main.cpp
se2/capt_com/: CMakeLists.txt  main.cpp
se2/capt_gen/: CMakeLists.txt  main.cpp
se2/capt_lib/: CMakeLists.txt
se2/capt_plot/: CMakeLists.txt  main.cpp
se2/capt_sim/: CMakeLists.txt  main.cpp
se2/data/: valkyrie.xml  valkyrie_xy.xml
se2/include/: base.h  capturability.h  cr_plot.h  footstep.h  grid.h  input.h  loader.h  model.h  param.h  plot.h  polygon.h  state.h  swing.h
se2/src/: base.cpp  capturability.cpp  cr_plot.cpp  footstep.cpp  grid.cpp  loader.cpp  model.cpp  param.cpp  plot.cpp  polygon.cpp  swing.cpp
xml/: .gitignore  CMakeLists.txt  data.xml  main.cpp  readme.md  sample.cpp
xml/data/: data.xml  enuvo4cy.xml  enuvo4cy_ctrl.xml  graph.xml  parallel_biped.xml  sample.xml
xml/include/: graph.h  loader.h  model.h  reader.h  vector.h
xml/src/: graph.cpp  loader.cpp  model.cpp  reader.cpp
(+300 files in other folders)
